kubernetes/prod/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.org/websocket-services: "crssi"
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    nginx.org/proxy-connect-timeout: "600s"
    nginx.org/proxy-read-timeout: "600s"
    nginx.org/proxy-send-timeout: "600s"
  name: crssi-ingress
  namespace: matinformatics
spec:
  rules:
    - host: crssi.pods.uvarc.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: crssi
                port:
                  number: 80
  tls:
    - hosts:
        - crssi.pods.uvarc.io
      secretName: crssi-nginx-tls-ingress-secret
